		Planner: added On Time column to Work Summary by Roll Group report
		Planner: removed Unit Overview link from Edit view in Lesson Planner
		Planner: removed Unit Content from View in Lesson Planner (it's now accessible via the Unit Overview link)
		Planner: improved workflow from Departments to Lesson Planner for parents
		Resources: improved usability of tag entry interface
		Resources: fixed breakage of tags including apostrophes
		Resources: added filter persistence to pagination links in View Resources
		Resources: fixed issue leading to new tags having '' added around them when adding new resource
		School Admin: fixed timezone issue in managing special days
		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
		School Admin: fixed PHP notice issue when adding special days
		School Admin: fixed PHP warning caused by empty arrays in Tracking Settings
		School Admin: added ability to link Educational Assistances to Form/Roll Groups
		School Admin: fixed leap year error in Manage Special Days
		School Admin: interface text tweak in Manage Grade Scales
		Staff: fixed PHP Notice bugs in Staff Manage Contract Add screen
		Staff: tweaked student accept to remove - from names
		Staff: fixed date display in Job Openings manage page
		Staff: added setting to control public display of staff application form (public applications are on by default)
		Staff: fixed bug causing blank contract money values being set to 0 instead of null when adding and editing contracts
		Students: fixed PHP Notice bug in Student Enrolment Add screen
		Students: tweaked student accept to remove - from names
		Students: fixed broken link from Family in student profile to sibling, when sibling is not enroled in the year
		Students: removed delete function from Notes, added logging for edits
		Students: adjusted family view of student profile to ensure only adults with status Full show